# wellness-diary

./: .gitignore  Makefile  README.md
api_one/: go.mod  main.go
gui_client/: CMakeLists.txt  Makefile  activity.c  activity.h  gui  gui.c  mental.c  mental.h  symptom.c  symptom.h  utils.c  utils.h
